# FreelanceX-Stellar-Escrow-dApp

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
contracts/escrow/: Cargo.toml  README.md
contracts/escrow/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/escrow/test_snapshots/test/: test_accept_closed_job.1.json  test_accept_job.1.json  test_authorization_checks.1.json  test_complete_milestone_before_funding.1.json  test_create_job.1.json  test_deposit_funds.1.json  test_multiple_jobs.1.json  test_unauthorized_operations.1.json
src/: App.tsx  env.d.ts  reportWebVitals.ts
src/components/: CreateJob.tsx  Footer.tsx  Navbar.tsx  PageTransition.tsx  WalletContext.tsx
src/config/: contract.ts
src/hooks/: useContract.ts  useStellarSdk.ts  useWallet.ts
src/pages/: CreateJob.tsx  FindWork.tsx  Home.tsx  JobDetails.tsx  Profile.tsx
src/services/: contract.ts  stellarService.ts
src/utils/: getStellarSdk.ts
