[package]
name = "freelancex-escrow"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib", "rlib"]

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.7"

[dev_dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
soroban-token-sdk = "22.0.0-rc.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 