[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.9.3"

[dev_dependencies]
soroban-sdk = { version = "0.9.3", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 